Report OTel config unknowns only when fallback properties used