@@ -5,7 +5,7 @@ import static java.lang.Boolean.TRUE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
+import java.util.List;
 
 import jakarta.inject.Inject;
 
@@ -24,6 +24,7 @@ class OpenTelemetryLegacyConfigurationTest {
             .overrideConfigKey("quarkus.opentelemetry.enabled", "false")
             .overrideConfigKey("quarkus.opentelemetry.tracer.enabled", "false")
             .overrideConfigKey("quarkus.opentelemetry.propagators", "tracecontext")
+            .overrideConfigKey("quarkus.opentelemetry.tracer.resource-attributes", "service.name=authservice")
             .overrideConfigKey("quarkus.opentelemetry.tracer.suppress-non-application-uris", "false")
             .overrideConfigKey("quarkus.opentelemetry.tracer.include-static-resources", "true")
             .overrideConfigKey("quarkus.opentelemetry.tracer.sampler", "off")
@@ -46,7 +47,9 @@ class OpenTelemetryLegacyConfigurationTest {
         assertEquals(FALSE, oTelBuildConfig.enabled());
         assertTrue(oTelBuildConfig.traces().enabled().isPresent());
         assertEquals(FALSE, oTelBuildConfig.traces().enabled().get());
-        assertEquals(Arrays.asList("tracecontext"), oTelBuildConfig.propagators()); // will not include the default baggagge
+        assertEquals(List.of("tracecontext"), oTelBuildConfig.propagators()); // will not include the default baggagge
+        assertTrue(oTelRuntimeConfig.resourceAttributes().isPresent());
+        assertEquals("service.name=authservice", oTelRuntimeConfig.resourceAttributes().get().get(0));
         assertEquals(FALSE, oTelRuntimeConfig.traces().suppressNonApplicationUris());
         assertEquals(TRUE, oTelRuntimeConfig.traces().includeStaticResources());
         assertEquals("always_off", oTelBuildConfig.traces().sampler());
